new yellow based on color palette

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   --dark-beige: #e3e5d7;
   --light-blue: #3e4657;
   --dark-blue: #2a3141;
-  --yellow: #ffff00;
+  --yellow: #e9d825;
 
   /* weather */
   --bg_main: #0a1f44;
